# smolk8s

./: Cargo.toml  LICENSE  README.md  deny.toml  setup
.github/: CODEOWNERS
.github/workflows/: audit.yaml  fmt.yaml  lint.yaml  publish.yaml  test-arch.yaml  test-fedora.yaml  test-macos.yaml  test-windows.yaml  test.yaml
hello-py/: Dockerfile  Makefile  manifest.yaml
hello-py/hello/: app.py
src/: docker.rs  host.rs  kubectl.rs  lib.rs  main.rs  settings.rs
